envoi de mail .populate coach et student

--- a/models/templateStudent.html
+++ b/models/templateStudent.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Nouvelle réservation de coaching</h1>
-    <p>Bonjour {{coachName}},</p>
-    <p>Une nouvelle réservation de coaching a été effectuée pour vous :</p>
+    <h1>Félicitation vous avez réservé votre séance</h1>
+    <p>Bonjour {{studentName}},</p>
+    <p>Votre réservation de coaching :</p>
     <ul>
         <li>Date : {{date}}</li>
         <li>Heure de début : {{startTime}}</li>
