--- a/models/templateCoachValidate.html
+++ b/models/templateCoachValidate.html
@@ -10,7 +10,7 @@
 
 <body>
     <p>Bonjour {{coachName}},</p>
-    <h1>Félicitation votre inscription à été validée.</h1>
+    <h1>Félicitation votre inscription en tant que coach à été validée.</h1>
     <p>Cordialement,</p>
     <p>L'équipe de CoachLinker</p>
 </body>
